tests/error/array_errors/new_array_elem_mismatch1.err
Error: Expected return statement (at $FILE:13:4)
   | 
11 | @guppy(module)
12 | def main() -> array[int, 1]:
13 |     array(False)
   |     ^^^^^^^^^^^^ Expected return statement

Guppy compilation failed due to 1 previous error
